cluster/bookstack/deployment-bookstack.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstack-deployment
  namespace: bookstack
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bookstack
  template:
    metadata:
      labels:
        app: bookstack
    spec:
      nodeSelector:
        role: apps
      containers:
        - env:
            - name: APP_URL
              value: "https://bookstack.nathanv.app"
            - name: APP_DEBUG
              value: "false"
            - name: DB_HOST
              value: bookstack-mysql-service.bookstack.svc.cluster.local
            - name: MAIL_DRIVER
              value: smtp
            - name: MAIL_PORT
              value: "587"
            - name: MAIL_ENCRYPTION
              value: tls
            - name: MAIL_FROM
              value: bookstack@nvaughn.email
            - name: MAIL_FROM_NAME
              value: Bookstack
            - name: CACHE_DRIVER
              value: database
            - name: SESSION_DRIVER
              value: database
            - name: QUEUE_CONNECTION
              value: database
            - name: AUTH_METHOD
              value: oidc
            - name: AUTH_AUTO_INITIATE
              value: "true"
            - name: OIDC_NAME
              value: Authentik
            - name: OIDC_DISPLAY_NAME_CLAIMS
              value: name
            - name: OIDC_ISSUER
              value: https://authentik.nathanv.app/application/o/bookstack/
            - name: OIDC_ISSUER_DISCOVER
              value: "true"
          image: cr.nathanv.app/ghcr.io/linuxserver/bookstack:26.05.20260608
          name: bookstack
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /config
              name: bookstack-vol
      volumes:
        - name: bookstack-vol
          persistentVolumeClaim:
            claimName: bookstack-pvc-bookstack
