cluster/bookstack/deployment-mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bookstack-mysql-deployment
  namespace: bookstack
spec:
  replicas: 1
  serviceName: bookstack-mysql
  selector:
    matchLabels:
      app: bookstack-mysql
  template:
    metadata:
      labels:
        app: bookstack-mysql
    spec:
      nodeSelector:
        role: apps
      containers:
        - env:
            - name: MARIADB_RANDOM_ROOT_PASSWORD
              value: "1"
          image: cr.nathanv.app/docker.io/library/mariadb:13.0.2
          name: mariadb
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-vol
      volumes:
        - name: mysql-vol
          persistentVolumeClaim:
            claimName: bookstack-pvc-mysql
