cluster/bookstack/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: bookstack-deployment
    namespace: bookstack
spec:
    replicas: 1
    selector:
        matchLabels:
            app: bookstack
    template:
        metadata:
            labels:
                app: bookstack
        spec:
            nodeSelector:
                role: apps
            containers:
              - env:
                  - name: APP_URL
                    value: "https://bookstack.nathanv.app"
                  - name: APP_DEBUG
                    value: "false"
                  - name: DB_HOST
                    value: mariadb
                  - name: DB_DATABASE
                    value: bookstack
                  - name: DB_USERNAME
                    value: bookstack
                  - name: MAIL_DRIVER
                    value: smtp
                  - name: MAIL_PORT
                    value: "587"
                  - name: MAIL_ENCRYPTION
                    value: tls
                  - name: MAIL_FROM
                    value: bookstack@nvaughn.email
                  - name: MAIL_FROM_NAME
                    value: Bookstack
                  - name: CACHE_DRIVER
                    value: database
                  - name: SESSION_DRIVER
                    value: database
                  - name: QUEUE_CONNECTION
                    value: database
                  - name: AUTH_METHOD
                    value: oidc
                  - name: AUTH_AUTO_INITIATE
                    value: "true"
                  - name: OIDC_NAME
                    value: Authentik
                  - name: OIDC_DISPLAY_NAME_CLAIMS
                    value: name
                  - name: OIDC_ISSUER
                    value: https://authentik.nathanv.app/application/o/bookstack/
                  - name: OIDC_ISSUER_DISCOVER
                    value: "true"
                image: ghcr.io/linuxserver/bookstack:24.12.1
                name: bookstack
                ports:
                  - containerPort: 80
                volumeMounts:
                  - mountPath: /config
                    name: bookstack-vol
              - env:
                  - name: MARIADB_RANDOM_ROOT_PASSWORD
                    value: "1"
                  - name: MARIADB_USER
                    value: bookstack
                  - name: MARIADB_DATABASE
                    value: bookstack
                image: docker.io/library/mariadb:11.6.2
                name: mariadb
                ports:
                  - containerPort: 3306
                volumeMounts:
                  - mountPath: /var/lib/mysql
                    name: mysql-vol
            volumes:
              - name: bookstack-vol
                persistentVolumeClaim:
                    claimName: bookstack-pvc-bookstack
              - name: mysql-vol
                persistentVolumeClaim:
                    claimName: bookstack-pvc-mysql
