cluster/bookstack/service-bookstack.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstack-service
  namespace: bookstack
spec:
  type: ClusterIP
  selector:
    app: bookstack
  ports:
    - port: 80
      protocol: TCP
