cluster/bookstack/service-mysql.yaml
apiVersion: v1
kind: Service
metadata:
    name: bookstack-mysql-service
    namespace: bookstack
spec:
    type: ClusterIP
    selector:
        app: bookstack-mysql
    ports:
      - port: 3306
        protocol: TCP
