cluster/bookstack/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bookstack-route
  namespace: bookstack
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bookstack.nathanv.app`)
      kind: Rule
      services:
        - name: bookstack-service
          port: 80
  tls:
    certResolver: le
    domains:
      - sans:
          - "*.nathanv.app"
